# photo-watermark-helper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  watermark.py
examples/: README.md  websocket_file_client.py
watermarker/: __init__.py  main.py
watermarker/cli/: commands.py
watermarker/core/: processor.py
watermarker/server/: __init__.py  app.py
watermarker/utils/: config.py  file_utils.py  logger.py
